class DataToFileStrategy
  private_class_method :new

  protected
  def str_to_hash_list(str)
  end
  def hash_list_to_str(hash_list)
  end
end