@startuml
'https://plantuml.com/class-diagram
abstract class Student_basis{
     -id: Integer
     -git: String
     -email:String
     -telegram:String
     -phone:String
     -contact:String
--
     +initialize(Hash)
     +contact?(): Boolean
     +validate?(): Boolean
     +get_contacts(): String
     .. getters..
     +git(): String
     +id():String
     +contact():String
     .. setters ..
     id=(Integer)
}

class Student extends Student_basis{
     -lastname: String
     -firstname: String
     -father_name: String

     +{static}from_json(String):Student
     +{static}is_val_name?(String): Boolean
     +{static}is_val_phone?(String): Boolean
     +{static}is_val_telegram?(String): Boolean
     +{static}is_val_email?(String): Boolean
     +{static}is_val_git?(String): Boolean

     +initialize(Hash)
     +set_contacts(Hash)
     +to_s(): String
     +get_info(): String
     +to_json():String
     +{static}read_from_txt(String):Array
     +{static}write_to_txt(String,Array)
     .. getters ..
     +phone(): String
     +telegram(): String
     +email(): String
     +last_name(): String
     +first_name(): String
     +father_name(): String
     .. setters ..
     +git=(String)
     +phone=(String)
     +telegram=(String)
     +email=(String)
     +last_name=(String)
     +first_name=(String)
     +father_name=(String)

}

class Student_short extends Student_basis{
     -lastname_and_initials: String
     
     {static}from_student(Student): ShortStudent
     +initialize(Integer, String)
     +to_s(): String
     .. getters ..
     +lastname_and_initials():String
     .. setters ..

}


class DataTable{
    -table : Array
    -rows_count: Integer
    -cols_count: Integer
    __
    +initialize(Array)
    +get_item(Integer,Integer): Object
    __getters__
    +rows_count: Integer
    +cols_count: Integer
    -table: Array
    __setters__
    -rows_count
    -cols_count
    -table=(Array)
}
abstract class DataList{
    -list : Array
    -selected_objects: Array
    __
    -initialize(Array)
    +select(Integer):Array
    +get_selected(): Array<Integer>
    +get_data(): DataTable
    #get_names()
    #get_fields_datatable(objects)

    __getters__
    -list: Array
    -selected_objects: Array
    __setters__
    +list: Array
    -selected_objects: Array
}

class DataListStudentShort extends DataList{
    --
    +initialize(Array)
    +get_names(): Array
    +add_observer(Object)
    +delete_observer(Object)
    +notify()
    __setters__
    +list: Array

    #get_fields_datatable(Student_short): Array<String>
}

DataList ..> DataTable
DataListStudentShort o-- Student_short

class Student_List_Base{
    -students: Array
    -slb_id: Integer
    -file_type:DataToFileStrategy
--
    initialize(DataToFileStrategy)
    +read_from_file(String)
    +write_to_file(String)
    +get_k_n_student_short_list(Integer,Integer,
    data_list:nil): DataListStudentShort
    +student_by_id(Integer):Student
    +sort_students: Array
    +add_student(Student): Array
    +remove_student(Integer): Array
    +get_student_short_count: Integer
    +update_id: Integer

--  getters --
    -students: Array
    -slb_id:Integer
    -file_type: DataToFileStrategy
--  setters --
    -students:Array
    -slb_id:Integer
    -file_type:DataToFileStrategy
}

abstract class DataToFileStrategy{
    initialize()
    #str_to_hash_list(string):Array
    #hash_list_to_str(Array):String
}

class Student_List_Json extends DataToFileStrategy{
    --
    initialize()
    +str_to_hash_list(String):Array
    +hash_list_to_str(Array):String

}

class Student_List_YAML extends DataToFileStrategy{
    --
    initialize()
    +str_to_hash_list(String):Array
    +hash_list_to_str(Array):String

}

class Student_List_TXT extends DataToFileStrategy{
    --
    initialize()
    +str_to_hash_list(String):Array
    +hash_list_to_str(Array):String
}
Student_List_Base *-- DataToFileStrategy

class DB_Adapter{
    -db: DB_Source
    --
    initialize()
    +from_array_to_hash(Array):Hash
    +student_fields(Student): Array
    +student_by_id(Integer):Student
    +add_student(Student)
    +remove_student(Integer)
    +replace_student(Integer,Student)
    +student_count():Integer
    +get_k_n_student_short(Integer,Integer,DataList:nil)
        
}

class DB_Source{
    -instance_mutex:Mutex
    -instance: DB_Source
    -db:SQLite3::Database
    --
    +instance():DB_Source 
    -initialize()
    exec(String,*Object):SQLite3::Result
}

class FileAdapter{
    -filepath: String
    -file: Student_list_Base
    --
    +initialize(DataToFileStrategy,String)
    +student_by_id(Integer):Student
    +get_k_n_student_short(Integer,Integer,DataList=nil):DataListStudentShort
    +add_student(Student)
    +replace_student(Integer,Student)
    +remove_student(Integer)
    +student_count():Integer
}
FileAdapter o-- Student_List_Base

class StudentClient{
    -adapter
    --
    +initialize(adapter)
    +student_by_id(Student):Integer
    +get_k_n_student_short(Integer,Integer,DataList=nil):DataListStudentShort
    +add_student(Student)
    +replace_student(Integer,Student)
    +remove_student(Integer)
    +student_count():Integer
}
StudentClient o-- FileAdapter
StudentClient o-- DB_Adapter
DB_Adapter o-- DB_Source
StudentClient ..> DataListStudentShort


class View{
    -view
    -table
    -controller
    -- 
    +initialize(view)
    +create_button(FXFrame,String,Integer,Integer):FXButton
    +create_label(FXFrame,String,Integer,Integer):FXLabel
    +create_text(FXFrame,String,Integer,Integer):FXText
    +sort_columns()
    +check_combobox(FXFrame,String,Integer,Integer)
    +set_table_data(DataTable)
    +create()
}

class Controller{
    -view: View
    -student_client: StudentClient
    -current_page: Integer
    -all_pages: Integer
    -data_list_student_short: DataListStudentShort
    --
    +refresh_data
    +next_page
    +prev_page
    +get_currentpage
}
Controller --* View
Controller o-- View
StudentClient --o Controller
DataListStudentShort --o Controller

@enduml
